# learn-cmake

./: README.md
01-hello-world/: CMakeLists.txt  main.cpp
02-static-library/: CMakeLists.txt
02-static-library/include/: Hello.h
02-static-library/src/: Hello.cpp  main.cpp
03-shared-library/: CMakeLists.txt
03-shared-library/src/: main.cpp
04-static-shared-library/: CMakeLists.txt
04-static-shared-library/src/: Hello_Shared.cpp  Hello_Static.cpp
05-static-shared-library-ext/: CMakeLists.txt
05-static-shared-library-ext/src/: Hello.cpp
06-target-compile-definitions/: CMakeLists.txt
07-using-list/: CMakeLists.txt
08-multi-file-using-list/: CMakeLists.txt  Hello.cpp  Hello.h  Hello1.cpp  Hello1.h  Hello2.cpp  Hello2.h  main.cpp
09-set-parent-scope/: CMakeLists.txt
10-function-pass-param/: CMakeLists.txt
11-cmake-parse-arguments/: CMakeLists.txt
12-build-cuda/: CMakeLists.txt  test.cu
13-simple-mpi-demo/: CMakeLists.txt
13-simple-mpi-demo/simpleMPI/: simpleMPI.cpp  simpleMPI.cu
14-simple-cublas-demo/: CMakeLists.txt
14-simple-cublas-demo/simpleCUBLAS/: simpleCUBLAS.cpp
15-libtorch-demo/: CMakeLists.txt
15-libtorch-demo/src/: main.cpp
