CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(multi-file-using-list)

SET(EXE_SOURCES)

LIST(APPEND EXE_SOURCES main.cpp)
LIST(APPEND EXE_SOURCES Hello.cpp)
LIST(APPEND EXE_SOURCES Hello1.cpp)
LIST(APPEND EXE_SOURCES Hello2.cpp)

MESSAGE(STATUS "EXE_SOURCES = ${EXE_SOURCES}")

ADD_EXECUTABLE(hello_world ${EXE_SOURCES})

