CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(simple_mpi_cuda CXX CUDA)

FIND_PACKAGE(MPI)

ADD_EXECUTABLE(hello_mpi simpleMPI/simpleMPI.cu simpleMPI/simpleMPI.cpp)
TARGET_INCLUDE_DIRECTORIES(hello_mpi PRIVATE ${MPI_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(hello_mpi PRIVATE ${MPI_LIBRARY})
SET_TARGET_PROPERTIES(hello_mpi PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
