CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)

PROJECT(libtorch-demo)

FIND_PACKAGE(Torch REQUIRED PATHS /usr/local/lib/libtorch-1.11.0)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")

ADD_EXECUTABLE(libtorch-demo src/main.cpp)
TARGET_LINK_LIBRARIES(libtorch-demo "${TORCH_LIBRARIES}")
SET_PROPERTY(TARGET libtorch-demo PROPERTY CXX_STANDARD 14)
